trunk/tests/kiama/negative/name_errors/L2/7_badfor5.ob
MODULE badfor;

VAR
    avar : INTEGER;

BEGIN
    FOR dvar := 1 TO 2 DO
        avar := 99
    END
END badfor.
